--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+            "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css","./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js","node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js","./node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
           },
           "configurations": {
             "production": {
